# zctf

./: .gitignore  1차_제품_설계.md  Cargo.toml  PoC_설계.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
bench/: README.md  native.js  package.json  transform.bench.js  vitest.config.js  wasm-runtime.js
bench/model/: Cargo.toml  build.rs
bench/model/src/: lib.rs
bench/results/: IMPROVEMENTS.md  latest.json
bench/rust/: Cargo.toml  build.rs
bench/rust/src/: lib.rs
bench/schema-fragments/: transform-result.schema.json  warning-level.schema.json  warning.schema.json
bench/test/: integration.test.js
bench/wasm/: Cargo.toml
bench/wasm/src/: lib.rs
benchmark-results/: bun-ffi-2026-06-30-rerun.json  bun-ffi.json  napi-2026-06-30-rerun.json  napi-2026-07-01-after.json  napi-2026-07-01-before.json  napi-2026-07-01-buffer-tostring.json  napi-2026-07-01-direct-string-ref.json  napi.json  wasm-2026-06-30-rerun.json  wasm.json
crates/zctf/: Cargo.toml
crates/zctf-bench-fixtures/: Cargo.toml
crates/zctf-bench-fixtures/src/: config.rs  lib.rs  report.rs
crates/zctf-cli/: Cargo.toml
crates/zctf-cli/src/: main.rs
crates/zctf-codegen/: Cargo.toml
crates/zctf-codegen/src/: lib.rs
crates/zctf-core/: Cargo.toml
crates/zctf-core/src/: bench.rs  config.rs  document.rs  layout.rs  lib.rs  writer.rs
crates/zctf-ffi/: Cargo.toml
crates/zctf-ffi-adapter/: Cargo.toml
crates/zctf-ffi-adapter/src/: lib.rs
crates/zctf-ffi/src/: lib.rs
crates/zctf-macros/: Cargo.toml
crates/zctf-macros/src/: lib.rs
crates/zctf-napi/: Cargo.toml
crates/zctf-napi-adapter/: Cargo.toml
crates/zctf-napi-adapter/src/: lib.rs
crates/zctf-napi-macros/: Cargo.toml
crates/zctf-napi-macros/src/: lib.rs
crates/zctf-napi/src/: lib.rs
crates/zctf-schema/: Cargo.toml
crates/zctf-schema/src/: lib.rs
crates/zctf-wasm/: Cargo.toml
crates/zctf-wasm-adapter/: Cargo.toml
crates/zctf-wasm-adapter/src/: lib.rs
crates/zctf-wasm/src/: lib.rs
crates/zctf/src/: lib.rs
docs/: BENCHMARKS-2026-06-30-RERUN.md  BENCHMARKS.md  BENCHMARK_CASES.md  DESIGN.md  MEMORY_LAYOUT.md  direct-string-ref-개선-결과-2026-07-01.md  full-traversal-개선-결과-2026-06-30.md  개선안-2026-06-30-06:03.md  개선안-2026-06-30-20:37.md  개선안-2026-07-01-10:14.md  개선안-적용-결과-2026-07-01.md  실행시간-회귀-2026-06-30.md
schemas/: zctf.schema.json
scripts/: bench-string-decode.js  generate.js
