[package]
name = "zctf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command line generator and inspector for zctf"

[[bin]]
name = "zctf"
path = "src/main.rs"

[dependencies]
zctf-codegen = { path = "../zctf-codegen" }
zctf-schema = { path = "../zctf-schema" }
serde_json = "1"
glob = "0.3"
