[package]
name = "zctf-napi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi8"] }
napi-derive = "3"
serde_json = "1"
zctf-core = { path = "../zctf-core" }

[build-dependencies]
napi-build = "2"
