[package]
name = "zctf-bench-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "zctf_napi"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi8"] }
napi-derive = "3"
serde_json = "1"
zctf-bench-fixtures = { path = "../zctf-bench-fixtures" }

[build-dependencies]
napi-build = "2"
